--- a/package.json
+++ b/package.json
@@ -1,27 +1,32 @@
 {
   "name": "visual",
-  "dependencies": {
-    "d3": "5.11.0",
-    "powerbi-visuals-utils-dataviewutils": "2.2.1",
-    "core-js": "3.2.1"
+  "description": "default_template_value",
+  "repository": {
+    "type": "default_template_value",
+    "url": "default_template_value"
   },
-  "devDependencies": {
-    "@types/d3": "5.7.2",
-    "typescript": "3.6.2",
-    "less": "3.10.3",
-    "less-loader": "5.0.0",
-    "style-loader": "0.23.1",
-    "tslint-microsoft-contrib": "6.2.0",
-    "powerbi-visuals-api": "2.6.1",
-    "tslint": "5.18.0"
-  },
+  "license": "MIT",
   "scripts": {
-    "postinstall": "npm run cert",
     "pbiviz": "pbiviz",
     "start": "pbiviz start",
     "package": "pbiviz package",
-    "lint": "tslint -c tslint.json -p tsconfig.json",
-    "test": "pbiviz package --resources --no-minify --no-pbiviz",
-    "cert": "pbiviz --install-cert"
+    "lint": "tslint -c tslint.json -p tsconfig.json"
+  },
+  "dependencies": {
+    "@babel/runtime": "7.6.0",
+    "@babel/runtime-corejs2": "7.6.0",
+    "@types/d3": "5.7.2",
+    "core-js": "3.2.1",
+    "d3": "5.12.0",
+    "powerbi-visuals-api": "~3.8.0",
+    "powerbi-visuals-utils-dataviewutils": "2.2.1",
+    "powerbi-visuals-utils-formattingutils": "^4.7.1",
+    "powerbi-visuals-utils-svgutils": "^2.3.2"
+  },
+  "devDependencies": {
+    "ts-loader": "6.1.0",
+    "tslint": "^5.18.0",
+    "tslint-microsoft-contrib": "^6.2.0",
+    "typescript": "3.6.3"
   }
 }
